--- a/wine_quality_nn.ipynb
+++ b/wine_quality_nn.ipynb
@@ -9,6 +9,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!git clone https://github.com/cadusouza2001/vinho.git\n",
+        "%cd vinho\n",
+        "!pip install -q pandas scikit-learn tensorflow matplotlib\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
