--- a/wine_quality_nn.ipynb
+++ b/wine_quality_nn.ipynb
@@ -168,8 +168,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Avaliação final no conjunto de teste\\n",
-        "loss, acc = model.evaluate(X_test, y_test, verbose=0)\\n",
+        "# Avaliação final no conjunto de teste\\n\n",
+        "loss, acc = model.evaluate(X_test, y_test, verbose=0)\n",
         "print(f\"Acurácia de teste: {acc:.4f}\")"
       ]
     },
@@ -179,21 +179,21 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import matplotlib.pyplot as plt\\n",
-        "# Curvas de perda e acurácia para análise de overfitting\\n",
-        "plt.figure(figsize=(12,4))\\n",
-        "plt.subplot(1,2,1)\\n",
-        "plt.plot(history.history[\"loss\"], label=\"train\")\\n",
-        "plt.plot(history.history[\"val_loss\"], label=\"val\")\\n",
-        "plt.xlabel(\"Epoch\")\\n",
-        "plt.ylabel(\"Loss\")\\n",
-        "plt.legend()\\n",
-        "plt.subplot(1,2,2)\\n",
-        "plt.plot(history.history[\"accuracy\"], label=\"train\")\\n",
-        "plt.plot(history.history[\"val_accuracy\"], label=\"val\")\\n",
-        "plt.xlabel(\"Epoch\")\\n",
-        "plt.ylabel(\"Acurácia\")\\n",
-        "plt.legend()\\n",
+        "import matplotlib.pyplot as plt\n",
+        "# Curvas de perda e acurácia para análise de overfitting\\n\n",
+        "plt.figure(figsize=(12,4))\n",
+        "plt.subplot(1,2,1)\n",
+        "plt.plot(history.history[\"loss\"], label=\"train\")\n",
+        "plt.plot(history.history[\"val_loss\"], label=\"val\")\n",
+        "plt.xlabel(\"Epoch\")\n",
+        "plt.ylabel(\"Loss\")\n",
+        "plt.legend()\n",
+        "plt.subplot(1,2,2)\n",
+        "plt.plot(history.history[\"accuracy\"], label=\"train\")\n",
+        "plt.plot(history.history[\"val_accuracy\"], label=\"val\")\n",
+        "plt.xlabel(\"Epoch\")\n",
+        "plt.ylabel(\"Acurácia\")\n",
+        "plt.legend()\n",
         "plt.show()"
       ]
     },
@@ -220,12 +220,12 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\\n",
-        "# Predição no teste e visualização da matriz de confusão\\n",
-        "y_pred = model.predict(X_test).argmax(axis=1)\\n",
-        "cm = confusion_matrix(y_test, y_pred)\\n",
-        "disp = ConfusionMatrixDisplay(cm)\\n",
-        "disp.plot()\\n",
+        "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
+        "# Predição no teste e visualização da matriz de confusão\n",
+        "y_pred = model.predict(X_test).argmax(axis=1)\n",
+        "cm = confusion_matrix(y_test, y_pred)\n",
+        "disp = ConfusionMatrixDisplay(cm)\n",
+        "disp.plot()\n",
         "plt.show()"
       ]
     }
