--- a/wine_quality_nn.ipynb
+++ b/wine_quality_nn.ipynb
@@ -168,7 +168,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Avaliação final no conjunto de teste\\n\n",
+        "# Avaliação final no conjunto de teste\n",
         "loss, acc = model.evaluate(X_test, y_test, verbose=0)\n",
         "print(f\"Acurácia de teste: {acc:.4f}\")"
       ]
@@ -180,7 +180,7 @@
       "outputs": [],
       "source": [
         "import matplotlib.pyplot as plt\n",
-        "# Curvas de perda e acurácia para análise de overfitting\\n\n",
+        "# Curvas de perda e acurácia para análise de overfitting\n",
         "plt.figure(figsize=(12,4))\n",
         "plt.subplot(1,2,1)\n",
         "plt.plot(history.history[\"loss\"], label=\"train\")\n",
