--- a/wine_quality_nn.ipynb
+++ b/wine_quality_nn.ipynb
@@ -43,7 +43,23 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ad5105c7",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "plt.figure(figsize=(6,4))\n",
+        "sns.countplot(x='quality', data=data)\n",
+        "plt.title('Distribu\\u00e7\\u00e3o Original da Qualidade')\n",
+        "plt.show()"
+      ]
+    },
+    {
       "cell_type": "markdown",
+      "id": "29818b2a",
       "metadata": {},
       "source": [
         "### Conceitos\n",
@@ -53,6 +69,7 @@
     },
     {
       "cell_type": "markdown",
+      "id": "7a2473e6",
       "metadata": {},
       "source": [
         "## 2. Pré-processamento"
@@ -61,6 +78,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "b6d24026",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -83,7 +101,21 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "3c8b64c7",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "plt.figure(figsize=(6,4))\n",
+        "sns.countplot(x=y)\n",
+        "plt.title('Distribu\\u00e7\\u00e3o das Classes (0=baixa,1=m\\u00e9dia,2=alta)')\n",
+        "plt.show()"
+      ]
+    },
+    {
       "cell_type": "markdown",
+      "id": "7c165ae5",
       "metadata": {},
       "source": [
         "### Conceitos\n",
@@ -93,6 +125,7 @@
     },
     {
       "cell_type": "markdown",
+      "id": "a2230dd5",
       "metadata": {},
       "source": [
         "## 3. Construção do Modelo"
@@ -101,6 +134,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "190d4e8d",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -123,6 +157,7 @@
     },
     {
       "cell_type": "markdown",
+      "id": "5ad70dbd",
       "metadata": {},
       "source": [
         "### Conceitos\n",
@@ -133,6 +168,7 @@
     },
     {
       "cell_type": "markdown",
+      "id": "4031da46",
       "metadata": {},
       "source": [
         "## 4. Treinamento"
@@ -141,6 +177,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "e9c50979",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -157,6 +194,16 @@
     },
     {
       "cell_type": "markdown",
+      "id": "fabe7c2c",
+      "metadata": {},
+      "source": [
+        "### Conceitos\n",
+        "- **EarlyStopping**: interrompe o treinamento quando a validação não melhora, prevenindo overfitting.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "a143502a",
       "metadata": {},
       "source": [
         "## 5. Avaliação"
@@ -165,6 +212,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "8176b084",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -176,6 +224,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "307d9110",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -199,6 +248,7 @@
     },
     {
       "cell_type": "markdown",
+      "id": "01153bbe",
       "metadata": {},
       "source": [
         "### Conceitos\n",
@@ -209,6 +259,7 @@
     },
     {
       "cell_type": "markdown",
+      "id": "1bf0a8e7",
       "metadata": {},
       "source": [
         "## 6. Matriz de Confusão"
@@ -217,16 +268,47 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "abec590c",
       "metadata": {},
       "outputs": [],
       "source": [
-        "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
-        "# Predição no teste e visualização da matriz de confusão\n",
+        "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, classification_report\n",
+        "# Predi\\u00e7\\u00e3o no teste e visualiza\\u00e7\\u00e3o da matriz de confus\\u00e3o\n",
         "y_pred = model.predict(X_test).argmax(axis=1)\n",
         "cm = confusion_matrix(y_test, y_pred)\n",
         "disp = ConfusionMatrixDisplay(cm)\n",
         "disp.plot()\n",
+        "plt.show()\n",
+        "print(classification_report(y_test, y_pred))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "26b732e8",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "weights = model.layers[0].get_weights()[0]\n",
+        "plt.figure(figsize=(10,6))\n",
+        "sns.heatmap(weights, cmap='coolwarm')\n",
+        "plt.title('Pesos da Primeira Camada Densa')\n",
+        "plt.xlabel('Neur\\u00f4nios')\n",
+        "plt.ylabel('Atributos')\n",
         "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "84428a07",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "for i in range(5):\n",
+        "    probs = model.predict(X_test[i:i+1])[0]\n",
+        "    pred = probs.argmax()\n",
+        "    print(f'Exemplo {i}: real={y_test[i]} predito={pred} prob={probs[pred]:.3f}')"
       ]
     }
   ],
